# sac-action-extraction

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
notebooks/: data_analysis.py  interactive_analysis.py
playground/: analyze_action_sequences.py  assess_models.py  frequency_plot_generation_notebook.py  sac_analysis.py  submit_cv.py  submit_many_experiments.py
src/sac_action_extraction/: __init__.py  analyze_action_sequences.py  assess_models.py  augment_annotations.py  compare_old_and_new_p2a_sac.py  compare_old_and_new_p2a_sac_on_valid.py  concatenate_annotation_splits.py  create_annotation_splits.py  evaluate_dataset_eval_checkpoints.py  extract_accuracies_from_onmt_logs.py  generate_k_fold_split.py  get_sentences_with_given_accuracy.py  interactive_predictions.py  metrics.py  metrics_grid.py  sac_actions.py  sac_analysis.py  sac_converters.py  some_module.py  translate.py  try_out_first_sac_model.py  utils.py
tests/: __init__.py  test_dummy.py  test_some_module.py
