[metadata]
name = sac-action-extraction
version = attr: sac_action_extraction.__version__
description = Extraction of single-atom catalyst synthesis actions with transformers.
author = Laino team (IBM), Pérez-Ramírez team (ETHZ)
author_email = rxn4chemistry@zurich.ibm.com
license = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TBD/TBD
project_urls =
    Documentation = https://TBD.github.io/TBD/
    Repository = https://github.com/TBD/TBD
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
zip_safe = False
include_package_data = True
install_requires =
    click>=8.0.1

[options.packages.find]
where = src

[options.package_data]
sac_action_extraction =
    py.typed

[options.extras_require]
dev =
    black>=23.1.0
    bump2version>=1.0.1
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pytest>=5.3.4
    pytest-cov>=2.8.1
    types-setuptools>=57.4.14
    pre-commit>=3.0.4

[flake8]
extend-ignore = E203, E501
