[metadata]
name = sac-action-extraction
version = attr: sac_action_extraction.__version__
description = Extraction of single-atom catalyst synthesis actions with transformers.
author = Laino team (IBM), Pérez-Ramírez team (ETHZ)
author_email = rxn4chemistry@zurich.ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rxn4chemistry/sac-action-extraction
project_urls =
    Repository = https://github.com/rxn4chemistry/sac-action-extraction
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
zip_safe = False
include_package_data = True
install_requires =
    click>=8.0.1
    numpy>=1.21.4
    pandas>=1.3.0
    paragraph2actions>=1.4.0
    rapidfuzz>=2.8.0  # Makes Levenshtein distance calculation faster (in textdistance)
    rxn-onmt-utils>=1.0.2
    rxn-utils>=1.1.9
    scikit-learn>=1.0.0
    textdistance>=4.5.0
    tqdm>=4.25.0

[options.packages.find]
where = src

[options.package_data]
sac_action_extraction =
    py.typed

[options.extras_require]
dev =
    black>=23.1.0
    bump2version>=1.0.1
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pandas-stubs>=2.0.3.230814
    types-setuptools>=57.4.14
    types-tqdm>=4.64.0
notebooks =
    jupyterlab>=3.0.0
    jupytext>=1.12.0
    matplotlib>=3.2.2
    nbdev>=2.3.0
    seaborn>=0.12.0

[options.entry_points]
console_scripts =
    sac-augment-annotations = sac_action_extraction.create_annotation_splits:main
    sac-create-annotation-splits = sac_action_extraction.create_annotation_splits:main
    sac-concatenate-annotations = sac_action_extraction.concatenate_annotation_splits:main
    sac-metrics-grid = sac_action_extraction.metrics_grid:main

[flake8]
extend-ignore = E203, E501
